# rnaseqcount

./: .gitignore  Proposal.ipynb  README.md  environment.yml  pyproject.toml  rnaseqcount.ipynb
examples/: demo.ipynb
examples/real_sample_for_demo/: SraRunTable.csv
examples/rnaseq_demo/DEseq2_ouput/: DEseq2_output.csv  DEseq_volcano.py
examples/rnaseq_demo/real_output/: real_demo_diff_results.csv  real_demo_significant_genes.csv
examples/rnaseq_demo/real_prepare/: counts.csv  length.csv  metadata.csv
examples/rnaseq_demo/simulated/: simulated_demo_diff_results.csv  simulated_demo_significant_genes.csv
src/rnaseqcount/: __init__.py  algorithms.py  cli.py  core.py  io.py  stats.py  visualize.py
src/rnaseqcount.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rnaseqcount_prepare/: __init__.py  prepare.py
src/rnaseqcount_wf/: __init__.py  cli.py  data_simulator.py  workflow.py
tests/: test_cli.py  test_core.py  test_io.py
