[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnaseqcount"
version = "1.0.0"
description = "A comprehensive RNA-seq data analysis toolkit"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "requests",
    "mygene",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
rnaseqcount = "rnaseqcount.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rnaseqcount*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"